@@ -32,6 +32,7 @@ $ -> Language fix or change
  # [#26533] Sync more changes from platform 11.2
  # [#26452] Warning in the search
  # [#26445] Undefined index: CLIENT in updater\adapters\collection.php
+ # [#26501] [patch] fix for router notices *
 
 08-Aug-2011 Jean-Marie Simonet
  #$ [#26535] Incorrectly labeled folder in the Media manager + Options tips
